Reverted toList change